Change History
***************

1.0.1 (unreleased)
==================

- Added test extra to declare test dependency on ``zope.testing``.


1.0.0 (2008-10-18)
==================

- Fixed a small bug in error logging.

1.0.0b1 (2007-07-18)
====================

Initial release